--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Ideafunnel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:MxJAkw6B/+g8iG+FtIj+fpy+EVfnrtgmfOA60TeslY8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=ideafunnel.com.ng
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ideafunn_ideafunnel
+DB_USERNAME=ideafunn_ideafunn
+DB_PASSWORD=Binkatuponny123#
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=mail.ideafunnel.com.ng
+MAIL_PORT=464
+MAIL_USERNAME=webmaster@ideafunnel.com.ng
+MAIL_PASSWORD=Binkatuponny123#
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="webmaster@ideafunnel.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
