--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Ideafunnel
 APP_ENV=local
 APP_KEY=base64:MxJAkw6B/+g8iG+FtIj+fpy+EVfnrtgmfOA60TeslY8=
 APP_DEBUG=true
-APP_URL=ideafunnel.com.ng
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
